<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_00d3d1"
    tools:context=".view.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kk_day"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_instruction_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_instruction_1"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_1" />

    <TextView
        android:id="@+id/textView_instruction_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/home_instruction_2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_instruction_1" />
</androidx.constraintlayout.widget.ConstraintLayout>