<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.main.MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@color/color_3d2f57"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_main_pager"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager_main"
        app:tabBackground="@drawable/shape_main_pager_tab_selector"
        app:tabIndicatorHeight="0dp"
        app:tabMaxWidth="14dp"
        app:tabRippleColor="@android:color/transparent" />

    <EditText
        android:id="@+id/editText_link"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="link"
        android:background="@drawable/shape_white_radius_6"
        android:gravity="center"
        android:hint="@string/edit_link_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/shape_edit_text_cursor_drawable"
        app:layout_constraintBottom_toTopOf="@+id/button_get_short_link"
        app:layout_constraintEnd_toEndOf="@+id/button_get_short_link"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_get_short_link"
        app:layout_constraintTop_toBottomOf="@+id/view_bottom" />

    <TextView
        android:id="@+id/TextView_error_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edit_text_is_blank_background"
        android:gravity="center"
        android:text="@string/please_add_a_link_here"
        android:textColor="@color/color_ffc8ca"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/editText_link"
        app:layout_constraintEnd_toEndOf="@+id/editText_link"
        app:layout_constraintStart_toStartOf="@+id/editText_link"
        app:layout_constraintTop_toTopOf="@+id/editText_link"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_get_short_link"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/shape_00d3d1_radius_6_button_background"
        android:text="@string/shorten_it"
        android:textColor="@android:color/white"
        app:autoSizeMaxTextSize="18dp"
        app:autoSizeMinTextSize="15dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/view_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_link" />

    <ProgressBar
        android:id="@+id/main_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_3d2f57"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>